--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <nav class="hidden md:flex space-x-6">
         <a href="#" class="hover:underline">Beranda</a>
         <a href="#destinasi" class="hover:underline">Destinasi</a>
-        <a href="/kontak.html" class="hover:underline">Kontak</a>
+        <a href="kontak.html" class="hover:underline">Kontak</a>
       </nav>
     </div>
   </header>
